--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Rafaelight/Api-Naruto-Vz",
+  "homepage": "https://rafaelight.github.io/Api-Naruto-Vz/",
   "name": "naruto_api",
   "version": "0.1.0",
   "private": true,
