--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "gh-pages": "^3.2.3",
+    "i18next": "^23.4.6",
+    "i18next-http-backend": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-i18next": "^13.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
